# video-gene

./: .gitignore  AI_VIDEO_EDITOR_STACK_REPORT_2026.md  BLOCKED.md  FINAL_DECISION_SEGMENT_BASED_ARCHITECTURE.md  RESEARCH_ANSWERS.md  RESEARCH_LAYERED_VIDEO_EDITOR.md  RESEARCH_SEGMENT_VS_FULL.md  budget-text-overlay-research.md  implementation.md  plan.md  question.md  research-update.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_assets_bgm_audit.py  003_seed_bgm_catalog.py  004_segment_based_architecture.py  005_content_hash_upload_gate.py  006_draft_publish_retention.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  assets.py  draft_state.py  segment.py  video.py
backend/app/schemas/: assets.py  segment.py  video.py
backend/app/services/: asset_licensing.py  audio_sync.py  batch_generation.py  circuit_breaker.py  composition_pipeline.py  content_filter.py  cost_alerts.py  fal_client.py  ffmpeg_service.py  health.py  preview_service.py  prompt_enhancer.py  retention_service.py  s3_service.py  segment_pipeline.py  suno_service.py  tts_pipeline.py  tts_service.py  (+1 more)
backend/tests/: conftest.py  test_asset_licensing.py  test_audio_sync.py  test_audit.py  test_batch_generation.py  test_bgm.py  test_circuit_breaker.py  test_health.py  test_licenses.py  test_music_mixer.py  test_provider_router.py  test_segment_e2e.py  test_segment_pipeline.py  test_suno_service.py  test_video_generation_task.py  test_video_router.py
(+82 files in other folders)
