[project]
name = "video-generator"
version = "0.1.0"
description = "Cloud-based video generation platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30.0",
    "redis>=5.0",
    "celery>=5.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "ffmpeg-python>=0.2.0",
    "PyPDF2>=3.0",
    "pdfplumber>=0.11",
    "markdown>=3.6",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]
